--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         dotnet-version: 7.x
 
-    - run: dotnet build ${{ env.RX_PROJECT_DIR }}/System.Reactive.sln --framework net6.0
+    - run: dotnet build --framework net6.0 ${{ env.RX_PROJECT_DIR }}/src/System.Reactive.csproj
 
     - run: dotnet tool update -g docfx
     - run: docfx ${{ env.DOCFX_PROJECT_DIR }}/docfx.json
