--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         dotnet-version: 7.x
 
-    - run: dotnet build --framework net6.0 ${{ env.RX_NET_SOURCE_DIR }}/src/System.Reactive/System.Reactive.csproj
+    - run: dotnet build --framework netstandard2.0 ${{ env.RX_NET_SOURCE_DIR }}/src/System.Reactive/System.Reactive.csproj
 
     - run: dotnet tool update -g docfx
     - run: docfx ${{ env.DOCFX_PROJECT_DIR }}/docfx.json
